--- a/templates/index.html
+++ b/templates/index.html
@@ -90,6 +90,67 @@
             padding-bottom: 15px;
         }
 
+        .section {
+            display: flex;
+        }
+
+        .btn-hover {
+            display: inline-block;
+            font-weight: 500;
+            text-align: center;
+            text-decoration: none;
+            vertical-align: middle;
+            user-select: none;
+            background-color: #38a169;
+            color: #ffffff;
+            border: 1px solid transparent;
+            padding: 0.625rem 1.25rem;
+            font-size: 0.875rem;
+            line-height: 1.5;
+            border-radius: 0.375rem;
+            transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+        }
+
+        .btn-hover:focus {
+            outline: 0;
+            box-shadow: 0 0 0 0.2rem rgba(72, 187, 120, 0.5);
+        }
+
+        .btn-hover:hover {
+            background-color: #2f855a;
+        }
+
+        .btn-hover.dark {
+            background-color: #2c7a7b;
+        }
+
+        .btn-hover.dark:hover {
+            background-color: #1a202c;
+        }
+
+        .btn-hover.dark:focus {
+            box-shadow: 0 0 0 0.2rem rgba(72, 187, 120, 0.5);
+        }
+
+
+        .text-area {
+            display: block;
+            padding: 0.625rem;
+            width: 100%;
+            font-size: 0.875rem;
+            color: #1a202c;
+            background-color: #f8fafc;
+            border-radius: 0.375rem;
+            border: 1px solid #cbd5e0;
+            vertical-align: top;
+
+        }
+
+        .form-format{
+            display: flex;
+            flex-flow: column nowrap;
+            gap: 1rem;
+        }
     </style>
 </head>
 
@@ -101,7 +162,7 @@
         <div class="page">
             <span id="uploadText" onclick="imgPage()" class="active">Image Processing</span>
             &nbsp;
-            <span id="predictText" onclick="blankPage()">Text</span>
+            <span id="predictText" onclick="blankPage()">Sentiment Analysis</span>
         </div>
         <div id="uploadPage" class="active">
             <h3 style="text-align: center;">Upload Image and Prediction</h3>
@@ -113,7 +174,54 @@
             </div>
         </div>
         <div id="blankPage" class="hidden">
-            <h3>Blank Page</h3>
+            <div class="section">
+                <div class="" style="width: 40%;">
+                    <h1>คู่มือการใช้งาน</h1>
+                    <p>หน้านี้จะเป็นการทำนายความรู้สึกจากความคิดเห็นที่ผู้ได้มีการพิมพ์ใส่ในช่องข้อความความ
+                        โดยแหล่งข้อมูลที่ใช้ในการวิเคราะห์นั้นมาจากความคิดเห็นจากเว็บไซต์ (Website) ท่องเที่ยว</p>
+                    <ul>
+                        <li>
+                            ใส่ข้อความของคุณในช่องใส่ข้อความโดยจะใส่ได้เฉพาะภาษาไทย
+                        </li>
+                        <li>
+                            ระบบจะทำการวิเคราะห์ความรู้จากข้อความของคุณ
+                        </li>
+                        <li>
+                            ระบบจะแสดงผลลัทธ์ออกมาด้านล่างโดยจะแบ่งความรู้สึกออกเป็น 3 อย่าง โดยจะแสดงออกมาเป็นรูปอีโมจิ (emoji) ได้แก่
+                            <ul>
+                                <li>
+                                    กลาง
+                                    <img src="/static/images/confused.png"  width="20px" height="20px">                                   
+                                </li>
+                                <li>
+                                    บวก
+                                    <img src="/static/images/smile.png"  width="20px" height="20px">
+                                </li>
+                                <li>
+                                    ลบ
+                                    <img src="/static/images/sad.png"  width="20px" height="20px">
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-6" style="width: 60%;">
+                    <h1>Sentiment Analysis</h1>
+                    <form method="post" action="/" onsubmit="makeSentiment(); return false;" class="form-format">
+                        <label for="user_input">ใส่ข้อความของคุณ:</label>
+                        <!-- <textarea class="text-area" type="text" id="user_input" name="user_input" required
+                            pattern="[ก-๙\s]*" title="กรุณากรอกเฉพาะภาษาไทย"></textarea> -->
+                        <input class="text-area" type="text" id="user_input" name="user_input" required pattern="[ก-๙\s]*" title="กรุณากรอกเฉพาะภาษาไทย">
+                        <div class="" style="display: flex; justify-content: end; width: 100%;">
+                            <button class="btn-hover" type="submit">ยืนยัน</button>
+                        </div>
+                    </form>
+
+                    <p id="result_text"></p>
+                    <img id="result_icon" src="">
+
+                </div>
+            </div>
         </div>
     </div>
 
@@ -198,6 +306,26 @@
             document.getElementById('blankPage').classList.add('active');
             document.getElementById('uploadText').classList.remove('active');
             document.getElementById('predictText').classList.add('active');
+        }
+
+        function makeSentiment() {
+            var input = document.getElementById('user_input');
+            var formData = new FormData();
+
+            formData.append('user_input', input.value);
+
+            fetch('/Sentiment', {
+                method: 'POST',
+                body: formData
+            })
+                .then(response => response.json())
+                .then(data => {
+                    console.log(data);
+                    document.getElementById('result_text').innerHTML = 'ผลลัทธ์การวิเคราะห์ความรู้สึก: ' + data.data.sentiment_result.user_input;
+                    document.getElementById('result_icon').src = data.data.sentiment_result.icon;
+                    console.log(data.data.sentiment_result.icon);
+                })
+                .catch(error => console.error('Error:', error));
         }
     </script>
 </body>
