--- a/templates/index.html
+++ b/templates/index.html
@@ -177,7 +177,7 @@
             <div class="section">
                 <div class="" style="width: 40%;">
                     <h1>คู่มือการใช้งาน</h1>
-                    <p>หน้านี้จะเป็นการทำนายความรู้สึกจากความคิดเห็นที่ผู้ได้มีการพิมพ์ใส่ในช่องข้อความความ
+                    <p>หน้านี้จะเป็นการทำนายความรู้สึกจากความคิดเห็นที่ผู้ได้มีการพิมพ์ใส่ในช่องข้อความ
                         โดยแหล่งข้อมูลที่ใช้ในการวิเคราะห์นั้นมาจากความคิดเห็นจากเว็บไซต์ (Website) ท่องเที่ยว</p>
                     <ul>
                         <li>
